public class ParametersByProjection { add nominaPaymentComponentLink to